--- a/06 webSederhana/webSederhana.css
+++ b/06 webSederhana/webSederhana.css
@@ -90,12 +90,12 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -110,116 +110,116 @@ hgroup,
 menu,
 nav,
 section {
-    display: block;
+  display: block;
 }
 
 body {
-    line-height: 1;
+  line-height: 1;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 blockquote,
 q {
-    quotes: none;
+  quotes: none;
 }
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-    content: '';
-    content: none;
+  content: "";
+  content: none;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 /* ===================== akhir  */
 body {
-    font: 16px/28px arial, sans-serif;
-    background-color: #eaeaea;
-    color: #333333;
+  font: 16px/28px arial, sans-serif;
+  background-color: #eaeaea;
+  color: #333333;
 }
 
 .container {
-    background-color: #ffffff;
-    width: 800px;
-    margin: auto;
+  background-color: #ffffff;
+  width: 800px;
+  margin: auto;
 }
 
 .header {
-    padding: 20px;
-    padding-bottom: 10px;
+  padding: 20px;
+  padding-bottom: 10px;
 }
 
 .header .judul {
-    font-size: 40px;
-    font-weight: bold;
+  font-size: 40px;
+  font-weight: bold;
 }
 
 .header ul li {
-    display: inline-block;
-    margin-top: 20px;
-    margin-right: 10px;
+  display: inline-block;
+  margin-top: 20px;
+  margin-right: 10px;
 }
 
 .header a {
-    text-decoration: none;
-    color: salmon;
-    padding: 3px;
+  text-decoration: none;
+  color: salmon;
+  padding: 3px;
 }
 
 .header a:hover {
-    background-color: lightskyblue;
-    color: white;
+  background-color: lightskyblue;
+  color: white;
 }
 
 .hero {
-    height: 280px;
-    background-image: url(./image/Capture.PNG);
-    background-size: cover;
-    background-position: 0 -100px;
-    border-bottom: 5px solid lightskyblue;
-    border-top: 5px solid salmon;
+  height: 280px;
+  background-image: url(../image/Capture.PNG);
+  background-size: cover;
+  background-position: 0 -100px;
+  border-bottom: 5px solid lightskyblue;
+  border-top: 5px solid salmon;
 }
 
 .content {
-    padding: 20px;
+  padding: 20px;
 }
 
 .content h2 {
-    font-size: 28px;
-    font-weight: bold;
+  font-size: 28px;
+  font-weight: bold;
 }
 
 .content .penulis {
-    font-size: 11;
-    margin-top: 5px;
+  font-size: 11;
+  margin-top: 5px;
 }
 
 .content .penulis a {
-    color: salmon;
-    text-decoration: none;
+  color: salmon;
+  text-decoration: none;
 }
 
 .content p {
-    margin-bottom: 20px;
-    font-size: 14px;
+  margin-bottom: 20px;
+  font-size: 14px;
 }
 
 .footer {
-    background-color: #333333;
-    padding: 10px;
+  background-color: #333333;
+  padding: 10px;
 }
 
 .footer .copy {
-    color: #eaeaea;
-    text-align: center;
-    font-size: 12px;
+  color: #eaeaea;
+  text-align: center;
+  font-size: 12px;
 }
