--- a/08 webSederhana2/webSederhana2.css
+++ b/08 webSederhana2/webSederhana2.css
@@ -166,33 +166,11 @@ body {
 }
 
 .container {
-  width: 960px;
-  margin: 80px auto;
   background-color: #ffffff;
-  position: relative;
+  width: 960px;
+  margin: auto;
 }
 
-.top-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 70px;
-  background-color: lightskyblue;
-  border-bottom: 3px solid salmon;
-  z-index: 9999;
-}
-.twitter {
-  width: 200px;
-  height: 200px;
-  background-image: url(./image/screenshot3.jpg);
-  background-repeat: no-repeat;
-  display: inline-block;
-  text-indent: -9999px;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-}
 .header {
   padding: 20px;
   padding-bottom: 10px;
@@ -222,7 +200,7 @@ body {
 
 .hero {
   height: 320px;
-  background-image: url(./image/Capture.PNG);
+  background-image: url(../image/Capture.PNG);
   background-size: cover;
   background-position: 0 -230px;
   border-bottom: 5px solid lightskyblue;
